# wisp

./: .gitignore  README.md  pyproject.toml
docs/: report.md
outputs/report/: metrics.json  metrics.md
scripts/: download_cmu.py  setup_smpl.py
src/wisp/: __init__.py  cli.py  config.py
src/wisp/data/: bvh_loader.py  catalog.py  dataset.py  kinematics.py  preprocess.py  skeleton.py
src/wisp/eval/: metrics.py  report.py  sampler.py
src/wisp/models/: denoiser.py  diffusion.py  text_encoder.py
src/wisp/training/: ema.py  losses.py  trainer.py
src/wisp/utils/: logging.py
src/wisp/viz/: animate.py  smpl_renderer.py
