[project]
name = "wisp"
version = "0.1.0"
description = "Text-conditional stick-figure motion diffusion — SIGK Projekt 5"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26,<2.3",
    "scipy>=1.13",
    "bvhio>=1.5",
    "open-clip-torch>=2.24",
    "matplotlib>=3.8",
    "pillow>=10.3",
    "tqdm>=4.66",
    "typer>=0.12",
    "loguru>=0.7.2",
    "pydantic>=2.7",
    "requests>=2.32",
    "trimesh>=4.0",
]

[project.scripts]
wisp = "wisp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wisp"]

# CUDA wheels (Blackwell / DGX Spark) — Linux only. macOS keeps the default
# PyPI wheels with MPS support.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
